fix(patterns/modal): add visibility: hidden on closed modal

--- a/packages/styles/components/_c.modal.scss
+++ b/packages/styles/components/_c.modal.scss
@@ -186,4 +186,8 @@
   &-overlay {
     @include set-dialog-overlay();
   }
+
+  &.is-hidden {
+    visibility: hidden;
+  }
 }
